adding more content about matrices

--- a/matrices-refresher.ipynb
+++ b/matrices-refresher.ipynb
@@ -197,7 +197,129 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<!-- TODO up to matrix multiplication -->"
+    "As you can see, representing this graph data as a matrix allows us to easily answer questions such as:\n",
+    "\n",
+    "- \"how many buses are there from city A to city B ?\"\n",
+    "- \"what city has the most outgoing buses ?\"\n",
+    "- \"what city has the most incoming buses ?\"\n",
+    "- etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adding matrices together\n",
+    "\n",
+    "As long as the matrices to add or subtract have the same dimensions, you can add/substract them together by adding/substracting their corresponding elements:\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "1 & 2 \\\\\n",
+    "3 & 4 \\\\\n",
+    "\\end{bmatrix}\n",
+    "+\n",
+    "\\begin{bmatrix}\n",
+    "5 & 6 \\\\\n",
+    "7 & 8 \\\\\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "1+5 & 2+6 \\\\\n",
+    "3+7 & 4+8 \\\\\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "6 & 8 \\\\\n",
+    "10 & 12 \\\\\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "Mathematicians have not come to an agreement as to how to add/subtract matrices that don't have the same dimensions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Zero matrix\n",
+    "\n",
+    "A matrix with all elements equal to zero is called a _zero matrix_. It is usually represented by the symbol $O$. A subscript can be used to specify the dimensions of the matrix:\n",
+    "\n",
+    "$$O_{2,3} = \\begin{bmatrix} 0 & 0 & 0 \\\\ 0 & 0 & 0 \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "When adding a zero matrix and a matrix $M$, the result is $M$.\n",
+    "\n",
+    "Also, multiplying any `m * n` matrix by 0 results in a zero matrix of the same dimensions.\n",
+    "\n",
+    "Moreover, multiplying any scalar by a zero matrix will give you back the same zero matrix."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Matrices opposites\n",
+    "\n",
+    "The _opposite_ of a matrix $M$ is a matrix that, when added to $M$, gives a zero matrix. It is usually represented by the symbol $-M$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multiplying matrices by scalar values\n",
+    "\n",
+    "Multiplying a matrix by a real number, e.g. a _scalar_ value, is very simple: you just multiply each element of the matrix by the scalar value.\n",
+    "\n",
+    "You can also think of matrix multiplication by a scalar as repeated addition of the matrix to itself.\n",
+    "\n",
+    "### Closure property of multiplication applied to matrices\n",
+    "\n",
+    "Mutliplying a matrix by a scalar also follows the closure property of multiplication: the result of multiplying a matrix by a scalar is always a matrix, that has the same dimensions as the original matrix.\n",
+    "\n",
+    "### Associative property of multiplication applied to matrices\n",
+    "\n",
+    "Multiplying a matrix by a scalar also follows the associative property of multiplication: the result of multiplying a matrix by a scalar is the same, regardless of the order of the multiplication. For an example:\n",
+    "\n",
+    "$$\\begin{bmatrix} 1 & 1 & 1 \\\\ 1 & 1 & 1 \\\\ \\end{bmatrix} \\times 2 \\times 3$$\n",
+    "\n",
+    "... is the same as \n",
+    "\n",
+    "$$2 \\times \\begin{bmatrix} 3 & 3 & 3 \\\\ 3 & 3 & 3 \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "... or\n",
+    "\n",
+    "$$3 \\times \\begin{bmatrix} 2 & 2 & 2 \\\\ 2 & 2 & 2 \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "... or even\n",
+    "\n",
+    "$$6 \\times \\begin{bmatrix} 1 & 1 & 1 \\\\ 1 & 1 & 1 \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "### Distributive property of multiplication applied to matrices\n",
+    "\n",
+    "Multiplying a matrix by a scalar also follows the distributive property of multiplication. For an example:\n",
+    "\n",
+    "$$2 \\times (\\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\\\ \\end{bmatrix} + \\begin{bmatrix} 5 & 6 \\\\ 7 & 8 \\\\ \\end{bmatrix})$$\n",
+    "\n",
+    "... is the same as\n",
+    "\n",
+    "$$(2 \\times \\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\\\ \\end{bmatrix}) + (2 \\times \\begin{bmatrix} 5 & 6 \\\\ 7 & 8 \\\\ \\end{bmatrix})$$\n",
+    "\n",
+    "Also, a matrix can be distributed over scalar addition, as in:\n",
+    "\n",
+    "$$(2 + 3) \\times \\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "... which can be represented as:\n",
+    "\n",
+    "$$2 \\times \\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\\\ \\end{bmatrix} + 3 \\times \\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\\\ \\end{bmatrix}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!-- TODO up to quizz 2 in https://www.khanacademy.org/math/precalculus/x9e81a4f98389efdf:matrices -->"
    ]
   }
  ],
