--- a/matrices-refresher.ipynb
+++ b/matrices-refresher.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# installing dependencies\n",
-    "\n",
+    "# importing dependencies\n",
     "import matplotlib.pyplot as plt\n",
     "# lib used for working with graphs and networks\n",
     "import networkx as nx\n",
@@ -314,6 +313,57 @@
     "\n",
     "$$2 \\times \\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\\\ \\end{bmatrix} + 3 \\times \\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\\\ \\end{bmatrix}$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multiplying matrices together\n",
+    "\n",
+    "You can multiply two matrices together if the number of columns of matrix `A` is the same as the number of rows of `matrix `B`. \n",
+    "\n",
+    "The resulting matrix `C` will have the same number of rows as `A` and the same number of columns as `B`.\n",
+    "\n",
+    "The steps for matrix multiplication are:\n",
+    "\n",
+    "1. confirm that the number of columns of `A` is the same as the number of rows of `B`\n",
+    "2. initialize a zero matrix `C` with the same number of rows as `A` and the same number of columns as `B`\n",
+    "3. for each element $i,j$ of `C`:\n",
+    "    - multiply each element of row $i$ of `A` by each element of column $j$ of `B`\n",
+    "    - add all the results together to get the value of element $i,j$ of `C`\n",
+    "\n",
+    "### Example\n",
+    "\n",
+    "Let's take the following matrices:\n",
+    "\n",
+    "$$A = \\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "$$B = \\begin{bmatrix} 5 & 6 \\\\ 7 & 8 \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "The number of columns of `A` is the same as the number of rows of `B`, so we can multiply them together.\n",
+    "\n",
+    "The resulting matrix `C` will have the same number of rows as `A` and the same number of columns as `B`.\n",
+    "\n",
+    "So, `C` will be a 2 by 2 matrix.\n",
+    "\n",
+    "Let's initialize `C` to a zero matrix:\n",
+    "\n",
+    "$$C = \\begin{bmatrix} 0 & 0 \\\\ 0 & 0 \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "Now, let's calculate the value of each element of `C`:\n",
+    "\n",
+    "$$C_{1,1} = A_{1,1} \\times B_{1,1} + A_{1,2} \\times B_{2,1} = 1 \\times 5 + 2 \\times 7 = 19$$\n",
+    "\n",
+    "$$C_{1,2} = A_{1,1} \\times B_{1,2} + A_{1,2} \\times B_{2,2} = 1 \\times 6 + 2 \\times 8 = 22$$\n",
+    "\n",
+    "$$C_{2,1} = A_{2,1} \\times B_{1,1} + A_{2,2} \\times B_{2,1} = 3 \\times 5 + 4 \\times 7 = 43$$\n",
+    "\n",
+    "$$C_{2,2} = A_{2,1} \\times B_{1,2} + A_{2,2} \\times B_{2,2} = 3 \\times 6 + 4 \\times 8 = 50$$\n",
+    "\n",
+    "We now have matrix `C`:\n",
+    "\n",
+    "$$C = \\begin{bmatrix} 19 & 22 \\\\ 43 & 50 \\\\ \\end{bmatrix}$$"
+   ]
   }
  ],
  "metadata": {
@@ -321,18 +371,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.0"
   },
   "orig_nbformat": 4
  },
