introducing matrices as transformations of the plane

--- a/matrices-refresher.ipynb
+++ b/matrices-refresher.ipynb
@@ -364,6 +364,45 @@
     "\n",
     "$$C = \\begin{bmatrix} 19 & 22 \\\\ 43 & 50 \\\\ \\end{bmatrix}$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Matrices as transformations of the plane\n",
+    "\n",
+    "2 by 2 matrices can be used to represent transformations of the plane.\n",
+    "\n",
+    "You'd consider two essential vectors on a coordinate plane:\n",
+    "\n",
+    "$$VERTICAL = \\begin{bmatrix} 0 \\\\ 1 \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "The vertical vector is a vector that points straight up. The number at the top of the vector is the vertical component of the vector. The number at the bottom of the vector is the horizontal component of the vector.\n",
+    "\n",
+    "$$HORIZONTAL = \\begin{bmatrix} 1 \\\\ 0 \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "Any point on the plane is the weighted sum of these two vectors. A weighted sum is a sum where each term is multiplied by a corresponding weight before being added together:\n",
+    "\n",
+    "`x * HORIZONTAL + y * VERTICAL`.\n",
+    "\n",
+    "### Identity transformations\n",
+    "\n",
+    "_Identity transformations_ map each point of the plane to itself.\n",
+    "\n",
+    "They are represented as:\n",
+    "\n",
+    "$$I = \\begin{bmatrix} 1 & 0 \\\\ 0 & 1 \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "The 1st colum says \"what is the transformation you want to apply to the horizontal vector ?\". The 2nd column says \"what is the transformation you want to apply to the vertical vector ?\".\n",
+    "\n",
+    "## Linear transformations\n",
+    "\n",
+    "A 2 by 2 matrix will represent a linear transformation.\n",
+    "\n",
+    "A linear transformation will always map the origin on to itself.\n",
+    "\n",
+    "A linear transformation will always map a line on to another line."
+   ]
   }
  ],
  "metadata": {
