more layman explanations of what derivatives are

--- a/derivatives-refresher.ipynb
+++ b/derivatives-refresher.ipynb
@@ -10,6 +10,8 @@
     "\n",
     "Derivatives have many practical applications in various fields like physics, engineering, economics, etc. They are used to solve problems involving rates of change and motion, optimization problems, and in the calculation of instantaneous velocity or acceleration, among other things.\n",
     "\n",
+    "Derivatives are a way of finding **the instantaneous rate of change** or **the slope** of a function at any given point. A derivative in calculus is a measure of how a function changes as its input changes. It's like the speedometer of a car; it tells you how fast you're going at any point in time. Derivatives calculate the change of a function, not it's value.\n",
+    "\n",
     "When we draw a curve that represents a mathematical function, and then a straight line that just touches the curve at one specific point, we call that a _tangent line_ at that point. Mathematically, this means that the tangent line and the curve have the same slope at that point.\n",
     "\n",
     "In calculus, we often want to find the slope of a curve at a specific point, not just the slope of a straight line. Derivatives are a way of finding **the instantaneous rate of change** or **the slope** of a function at any point.\n",
