--- a/matrices-refresher.ipynb
+++ b/matrices-refresher.ipynb
@@ -401,7 +401,24 @@
     "\n",
     "A linear transformation will always map the origin on to itself.\n",
     "\n",
-    "A linear transformation will always map a line on to another line."
+    "A linear transformation will always map a line on to another line.\n",
+    "\n",
+    "What a figure becomes after a transformation is called an _image_."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Matrices determinants\n",
+    "\n",
+    "Matrices determinants example:\n",
+    "\n",
+    "$$A = \\begin{bmatrix} a & b \\\\ c & d \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "The determinant `|A|` of this matrix would be `ad - bc`.\n",
+    "\n",
+    "An interesting fact about determinants is that the absolute value of a matrix determinant multiplied by the area of a parallelogram gives us the new area of its image."
    ]
   }
  ],
@@ -410,6 +427,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
