better understanding of matrices and transformations

--- a/matrices-refresher.ipynb
+++ b/matrices-refresher.ipynb
@@ -385,6 +385,20 @@
     "\n",
     "`x * HORIZONTAL + y * VERTICAL`.\n",
     "\n",
+    "A pair of coordinates $(x, y)$ can be represented as a matrix:\n",
+    "\n",
+    "$$coord = \\begin{bmatrix} x \\\\ y \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "A transformation matrix would be represented like so:\n",
+    "\n",
+    "$$I = \\begin{bmatrix} a & b \\\\ c & d \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "You would then multiply this matrix by a 2 by 2 matrix to get the coordinates of the point after the transformation.\n",
+    "\n",
+    "The formula to do this would be:\n",
+    "\n",
+    "$$I \\times coord = \\begin{bmatrix} a & b \\\\ c & d \\\\ \\end{bmatrix} \\times \\begin{bmatrix} x \\\\ y \\\\ \\end{bmatrix} = \\begin{bmatrix} ax + by \\\\ cx + dy \\\\ \\end{bmatrix}$$\n",
+    "\n",
     "### Identity transformations\n",
     "\n",
     "_Identity transformations_ map each point of the plane to itself.\n",
@@ -395,7 +409,7 @@
     "\n",
     "The 1st colum says \"what is the transformation you want to apply to the horizontal vector ?\". The 2nd column says \"what is the transformation you want to apply to the vertical vector ?\".\n",
     "\n",
-    "## Linear transformations\n",
+    "### Linear transformations\n",
     "\n",
     "A 2 by 2 matrix will represent a linear transformation.\n",
     "\n",
@@ -404,6 +418,36 @@
     "A linear transformation will always map a line on to another line.\n",
     "\n",
     "What a figure becomes after a transformation is called an _image_."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Linear transformation: example with a square\n",
+    "\n",
+    "Given a square with coordinates  a $(0,0)$, b $(0,1)$, c $(1,0)$, and d $(1,1)$, we want apply a transformation to it using matrix $$I = \\begin{bmatrix} 1 & 2 \\\\ -3 & 3 \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "The first step would be to represent each coordinate as a column vector:\n",
+    "\n",
+    "$$a = \\begin{bmatrix} 0 \\\\ 0 \\\\ \\end{bmatrix}$$\n",
+    "$$b = \\begin{bmatrix} 0 \\\\ 1 \\\\ \\end{bmatrix}$$\n",
+    "$$c = \\begin{bmatrix} 1 \\\\ 0 \\\\ \\end{bmatrix}$$\n",
+    "$$d = \\begin{bmatrix} 1 \\\\ 1 \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "Then we would apply the transformation to each of these vectors by multiplying them by the matrix; as a reminder, the formula to do this is:\n",
+    "\n",
+    "$$I \\times coord = \\begin{bmatrix} a & b \\\\ c & d \\\\ \\end{bmatrix} \\times \\begin{bmatrix} x \\\\ y \\\\ \\end{bmatrix} = \\begin{bmatrix} ax + by \\\\ cx + dy \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "Now, let's apply this to our transformation:\n",
+    "\n",
+    "$$a' = \\begin{bmatrix} 1 & 2 \\\\ -3 & 3 \\\\ \\end{bmatrix} \\times \\begin{bmatrix} 0 \\\\ 0 \\\\ \\end{bmatrix} = \\begin{bmatrix} 0 \\\\ 0 \\\\ \\end{bmatrix}$$\n",
+    "$$b' = \\begin{bmatrix} 1 & 2 \\\\ -3 & 3 \\\\ \\end{bmatrix} \\times \\begin{bmatrix} 0 \\\\ 1 \\\\ \\end{bmatrix} = \\begin{bmatrix} 2 \\\\ 3 \\\\ \\end{bmatrix}$$\n",
+    "$$c' = \\begin{bmatrix} 1 & 2 \\\\ -3 & 3 \\\\ \\end{bmatrix} \\times \\begin{bmatrix} 1 \\\\ 0 \\\\ \\end{bmatrix} = \\begin{bmatrix} 1 \\\\ -3 \\\\ \\end{bmatrix}$$\n",
+    "$$d' = \\begin{bmatrix} 1 & 2 \\\\ -3 & 3 \\\\ \\end{bmatrix} \\times \\begin{bmatrix} 1 \\\\ 1 \\\\ \\end{bmatrix} = \\begin{bmatrix} 3 \\\\ 0 \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "\n",
+    "We now have our new set of coordinates !\n"
    ]
   },
   {
